# LLM_game_rec

./: .gitignore  README.md  SOLUTION.md  app.py  docker-compose.yml  main.py  problem_statement.md  pyproject.toml
config/: generation_config.yaml  llm_config.yaml
data/attributes/: all_attributes.json  art_styles.json  developers.json  music_styles.json  thematic_features.json  themes.json
data/final/: slot_games_dataset.json  slot_games_dataset_clean.json
data/vector_db/: chroma.sqlite3
prompts/: __init__.py  phase1_attribute_prompts.py  phase2_game_prompts.py  prompt_loader.py  similarity_prompts.py
scripts/: generate_data.py  generate_games.py  similarity_engine_setup.py  test_batch.py
src/: __init__.py  schema.py
src/generation/: __init__.py  attribute_generator.py  game_generator.py
src/similarity/: __init__.py  embedding_generator.py  reranker.py  similarity_engine.py  vector_store.py
src/utils/: __init__.py  config_loader.py  file_utils.py  llm_client.py
